docker/lighthouse-server/deploiement/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lhci-ingress
spec:
  rules:
    - host: lhci.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lhci-server-service
                port:
                  number: 9001
